--- a/style.css
+++ b/style.css
@@ -70,11 +70,12 @@ a:hover {
 
 #hamburger-nav {
   display: none;
-  position: relative;
+  position: absolute;
   z-index: 50;
   justify-content: space-between;
   padding: 1.5rem 5%;
   align-items: center;
+  width: 90%;
 }
 
 #hamburger-nav + section {
@@ -114,7 +115,7 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background: rgba(255, 255, 255, 0.95);
+  background: transparent;
   width: 180px;
   max-height: 300px;
   overflow: hidden;
@@ -124,8 +125,6 @@ a:hover {
   display: none;
   opacity: 0;
   transform: translateY(-10px);
-  border-radius: 8px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .menu-links a {
@@ -138,12 +137,8 @@ a:hover {
   text-decoration: none;
   transition: all 0.3s ease-in-out;
   margin-bottom: 5px;
-  -webkit-tap-highlight-color: rgba(
-    0,
-    0,
-    0,
-    0
-  ); /* Remove tap highlight on iOS */
+  -webkit-tap-highlight-color: transparent;
+  text-shadow: 0px 0px 2px rgba(255, 255, 255, 1);
 }
 
 .menu-links a:hover,
@@ -163,7 +158,6 @@ a:hover {
   right: 0;
   display: block;
   opacity: 1;
-  -webkit-transform: translateY(0);
   transform: translateY(0);
 }
 
@@ -865,12 +859,12 @@ footer .nav-links a {
 }
 
 .dark-mode .menu-links {
-  background: rgba(30, 30, 30, 0.95);
+  background: transparent;
 }
 
 .dark-mode .menu-links a {
   color: #f0f0f0;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.8);
 }
 
 .dark-mode .menu-links a:hover {
